@@ -18,3 +18,4 @@ require 'active_merchant/billing/gateways/exact'
 require 'active_merchant/billing/gateways/data_cash'
 require 'active_merchant/billing/gateways/card_stream'
 require 'active_merchant/billing/gateways/psl_card'
+require 'active_merchant/billing/gateways/quickpay'
